--- a/public/config/.env
+++ b/public/config/.env
@@ -1,3 +1,5 @@
 PORT=8080
 
 JWT_SECRET_KEY='jordyganteng'
+
+MongoDBURI = 'mongodb+srv://WEBEE21:1234567890@test1.aguevyu.mongodb.net/dataweb?retryWrites=true&w=majority'
