--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-flash": "^0.0.2",
     "express-jwt": "^7.7.7",
+    "express-session": "^1.17.3",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
@@ -17,6 +19,8 @@
     "mongoose": "^6.7.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.25.7",
     "uuid": "^9.0.0"
   },
