--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-jwt-cookiecombo": "^1.0.5",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.25.7",
     "uuid": "^9.0.0"
   },
